correcciones en la parte visual de la tabla empresa

--- a/i18n/en.yml
+++ b/i18n/en.yml
@@ -172,6 +172,11 @@ dictionary:
     editBusiness:         Edit Business
     infoBusiness:         Business Information
     nit:                  NIT
+    EnterTheNitCompany:   Enter the NIT Company
+    EnterTheCompanyName:  Enter the Company Name
+    EnterTheTradeNameOfTheCompany: Enter the trade name of the company
+    EnterYourAddress:     Enter Your Address
+    EnterYourPhone:       Enter Your Phone
     ##---------------------- EMPRESA----------------------------##
     
     ##---------------------- INSUMO----------------------------##
