Ajuste en Diccionario de dos palabras nuevas (Pagina (Page), de (of)) iMPLEMENTADO EN TODAS LAS TABLAS YA. Arreglo de sostenimiento de dato en formulario en caso de error implementado en tablas: Empleado, Credencial, Pago Trabajadores.

--- a/i18n/en.yml
+++ b/i18n/en.yml
@@ -40,6 +40,8 @@ dictionary:
     failureToDelete:      Failure Something To The Delete. 
     dateStart:            Date Start.
     dateEnd:              Date Ending.
+    page:                 Page
+    of:                   of
     ##----------------------SISTEMA-------------------------##
     
     ##----------------------USUARIO-------------------------##
