correcciones en control calidad -organizacion de validaciones puntuales.

--- a/i18n/es.yml
+++ b/i18n/es.yml
@@ -323,6 +323,7 @@ dictionary:
     errorMailCharacters:    El Correo debe ser (example@example.com).
     errorText:              Error el Campo solo debe Contener Texto (%texto%).
     errorDeleteForeign:     El Registro no Puede ser Eliminado Porque Esta Siendo Utilizado Por Otra Tabla.
+    errorDate:              El Campo solo debe contener fecha.
     ##---------------------- ERRORES----------------------------##
     ##-------------------------- ERRORES --------------------##
   errors:
