--- a/i18n/en.yml
+++ b/i18n/en.yml
@@ -297,6 +297,7 @@ dictionary:
     errorText:              Just be accepted Lyrics, No Number (%texto%).
     errorLengthDesc:        Error Your description (%desc_tipo_doc%) Maximum Exceeds Number of Characters (%caracteres%).
     errorDeleteForeign:     The record can not be deleted because it is being used by another table.
+    errorDate:              The field should only contain date.
    
     ##---------------------- ERRORES----------------------------##
     ##-------------------------- ERRORES --------------------##
