--- a/i18n/es.yml
+++ b/i18n/es.yml
@@ -318,6 +318,8 @@ dictionary:
     errorLenghtAmount:      Error su Cantidad (%cantidad%) Excede La cantidad Maxima De caracteres (%caracteres%).
     errorLenghtValue:       Error su valor (%valor%) Excede La cantidad Maxima De caracteres (%caracteres%).
     errorLengthTipoId:      Error Su Descripción (%descripcion%) Excede La Cantidad Maxima de Caracteres (%caracteres%).
+    errorLenghtDescription: Error su Descripcion (%descripcion%) Excede La cantidad Maxima De caracteres (%caracteres%).
+    erroLenghtPrice:        Error su Precio (%precio%) Excede La cantidad Maxima De caracteres (%caracteres%).
     errorNumeric:           Error El Campo debe Ser Solo Numerico.
     errorNull:              Error Los Campos deben Ser Diligenciados.
     errorMailCharacters:    El Correo debe ser (example@example.com).
