--- a/i18n/en.yml
+++ b/i18n/en.yml
@@ -296,7 +296,7 @@ dictionary:
     errorNumeric:           Error The Field Must Be Only Numeric.
     errorNull:              Error The Fields Must Be Filled Out.
     errorMailCharacters:    The Mail Should Be (example@example.com).
-    errorText:              Just be accepted Lyrics, No Number (%texto%).
+    errorText:              Just be accepted Lyrics, No Number.
     errorLengthDesc:        Error Your description (%desc_tipo_doc%) Maximum Exceeds Number of Characters (%caracteres%).
     errorDeleteForeign:     The record can not be deleted because it is being used by another table.
     errorDate:              The field should only contain date.
