implementacion de -controlcalidad -bagazo

--- a/i18n/es.yml
+++ b/i18n/es.yml
@@ -62,6 +62,15 @@ dictionary:
     provenance:           Procedencia
 
     ##----------------------JUGO-------------------------##
+    ##----------------------BAGAZO-------------------------##
+    chaff:                Bagazo
+    newChaff:             Nuevo Bagazo
+    editChaff:            Editar Bagazo
+    infoChaff:            Informacion De Bagazo
+    saccharose:           sacarosa
+    brix:                 Brix
+    humidity:             Humedad
+    ##----------------------BAGAZO-------------------------##
     
     ##----------------------TIPO EMPAQUE-------------------------##
     typePacking:          Tipo Empaque
@@ -338,6 +347,7 @@ dictionary:
     errorLenghtQuantity:    Error su cantidad (%cantidad%) Excede La cantidad Maxima De caracteres (%caracteres%).
     errorLenghtProvenance:  Error su procedencia (%procedencia%) Excede La cantidad Maxima De caracteres (%caracteres%).
     errorLenghtWeight:      Error su Peso (%peso%) Excede La cantidad Maxima De caracteres (%caracteres%).
+    errorLenghtHumidity:    Error su Humedad (%humedad%) Excede La cantidad Maxima De caracteres (%caracteres%).
     errorNumeric:           Error El Campo debe Ser Solo Numerico.
     errorNull:              Error Los Campos deben Ser Diligenciados.
     errorMailCharacters:    El Correo debe ser (example@example.com).
