--- a/i18n/en.yml
+++ b/i18n/en.yml
@@ -64,6 +64,15 @@ dictionary:
     provenance:           provenance
 
     ##----------------------JUGO-------------------------##
+    ##----------------------BAGAZO-------------------------##
+    chaff:                chaff
+    newChaff:             new chaff
+    editChaff:            Edit chaff
+    infoChaff:            Info chaff
+    saccharose:           saccharose
+    brix:                 Brix
+    humidity:             Humidity
+    ##----------------------BAGAZO-------------------------##
     
     ##----------------------TIPO EMPAQUE-------------------------##
     typePacking:          Type Packing
@@ -313,6 +322,7 @@ dictionary:
     errorLenghtQuantity:    Error Your Quantity (%cantidad%) Exceeds Number of Characters (%caracteres%).
     errorLenghtProvenance:  Error Your Porvenance (%procedencia%) Exceeds Number of Characters (%caracteres%).
     errorLenghtWeight:      Error Your weight (%peso%) Exceeds Number of Characters (%caracteres%).
+    errorLenghtHumidity:    Error Your Humidity (%humedad%) Exceeds Number of Characters (%caracteres%).
     errorNumeric:           Error The Field Must Be Only Numeric.
     errorNull:              Error The Fields Must Be Filled Out.
     errorMailCharacters:    The Mail Should Be (example@example.com).
